src/objects/milestone__c.object
<CustomObject>
    <description>Milestones related so product delivery or sales efforts. These can also be firm objectives.</description>
    <fields>
        <fullName>Actual_Start__c</fullName>
        <description>The date that the milestone actually started.</description>
        <inlineHelpText>The date that the milestone actually started.</inlineHelpText>
        <label>Actual Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <label>Company</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Milestones</relationshipLabel>
        <relationshipName>Milestones</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Completion_Variance__c</fullName>
        <description>Variance in days of planned date and the new target date.</description>
        <formula>Target_Date__c  -  Planned_Completion_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Variance in days of planned date and the new target date.</inlineHelpText>
        <label>Completion Variance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Milestone_Description__c</fullName>
        <description>Description of the milestone.</description>
        <inlineHelpText>Description of the milestone.</inlineHelpText>
        <label>Milestone Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Milestone_Status__c</fullName>
        <label>Milestone Status</label>
        <picklist>
            <picklistValues>
                <fullName>On Target</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Late</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Early</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>At Risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deferred</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Milestone_Type__c</fullName>
        <description>The type of milestone.</description>
        <label>Milestone Type</label>
        <picklist>
            <picklistValues>
                <fullName>Software</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Planned_Completion_Date__c</fullName>
        <description>The original date of the milestone.</description>
        <label>Planned Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Planned_Start__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>The date that the milestone should begin.</description>
        <inlineHelpText>The date that the milestone should begin.</inlineHelpText>
        <label>Planned Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <inlineHelpText>Is this planned, working, or completed?</inlineHelpText>
        <label>Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Planned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Working</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status_Comments__c</fullName>
        <label>Status Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Target_Date__c</fullName>
        <description>As time goes by the target date may shift further out or finish early.</description>
        <label>Target Date</label>
        <type>Date</type>
    </fields>
    <label>Milestone</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Milestone_Status__c</columns>
        <columns>Milestone_Type__c</columns>
        <columns>Target_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Milestones</fullName>
        <columns>NAME</columns>
        <columns>Milestone_Status__c</columns>
        <columns>Milestone_Type__c</columns>
        <columns>Target_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>Milestones</label>
    </listViews>
    <nameField>
        <label>Milestone Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Milestones</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>